Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31669

Stored credentials aren't removed from secret store when removing/editing a dashboard connection

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • Qt Creator 15.0.0-beta1
    • Qt Creator 15.0.0-beta1
    • Axivion
    • None
    • 9f37e0c44 (15.0)

      mehdi.salem is already working on this. Creating a ticket to get familiar with this Jira.

      This one definitively should make it to QtC15.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mehdi.salem Mehdi Salem
            daniel_hofmann Daniel Hofmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes