Axivion: delete Api token if server is removed

Fixes: QTCREATORBUG-31669
Change-Id: I646f604c5cf17d77fd7c8880164c27e7a6e61f10
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
Reviewed-by: hjk <hjk@qt.io>